내가 쓴 게시글(완) 빠진부분추가 / 조규완 / 02-10 23:28 [상세내용] 빠진부분 추가하였습니다 디테일 페이지 이동 및 수정버튼은 board부분 완성되는데로 수정해서 올리겠습니다

--- a/src/main/resources/templates/mypage-5.html
+++ b/src/main/resources/templates/mypage-5.html
@@ -162,7 +162,7 @@
                 <tr th:each="board, stat : ${list}">
                   <td class="py-3 cgw9">[[${board.boardNo}]]</td>
                   <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
-                      href="account-single-ticket.html">[[${board.title}]]</a></td>
+                      th:onclick="boardView([[${board.boardNo}]]);">[[${board.title}]]</a></td>
                   <td class="py-3 cgw9" th:text="${#dates.format(board.createDate, 'yyyy-MM-dd')}"></td>
                   <td class="py-3 cgw9">
                   		<button type="button" class="badge-cgw3 bg-secondary-cgw1 m-0 cgw30" th:onclick="boardUpdate([[${board.boardNo}]]);">수정</button>&nbsp;&nbsp;
@@ -225,6 +225,10 @@
 	<!-- Main theme script-->
 	<script src="js/theme.min.js"></script>
 	<script type="text/javascript">
+		function boardView(boardNo) {
+			location.href = "/board-view?&boardNo=" + boardNo;
+		}
+		
 		function boardUpdate(boardNo) {
 			location.href = "/board-update?" + "&boardNo=" + boardNo;
 		}
