--- a/src/main/resources/templates/mypage-5.html
+++ b/src/main/resources/templates/mypage-5.html
@@ -178,7 +178,7 @@
           <!-- pagination -->
           <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
             <ul class="pagination">
-              <li class="page-item"><a class="page-link" th:onclick="|movePage('/mypage-5?page=${pageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</a></li>
+              <li class="page-item"><button class="page-link" th:onclick="|movePage('/mypage-5?page=${pageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</button></li>
             </ul>
             <ul class="pagination">
               <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
@@ -190,13 +190,13 @@
 			                </li>
 	                	</th:block>
 	                	<th:block th:if="${status.current != pageInfo.currentPage}">
-			                <li class="page-item d-none d-sm-block"><a class="page-link" th:onclick="|movePage('/mypage-5?page=${status.current}');|">[[${status.current}]]</a></li>
+			                <li class="page-item d-none d-sm-block"><button class="page-link" th:onclick="|movePage('/mypage-5?page=${status.current}');|">[[${status.current}]]</button></li>
 	                	</th:block>
 	                </th:block>
             </ul>
             <ul class="pagination">
-              <li class="page-item"><a class="page-link" th:onclick="|movePage('/mypage-5?page=${pageInfo.nextPage}');|" aria-label="Next">Next<i
-                    class="ci-arrow-right ms-2"></i></a></li>
+              <li class="page-item"><button class="page-link" th:onclick="|movePage('/mypage-5?page=${pageInfo.nextPage}');|" aria-label="Next">Next<i
+                    class="ci-arrow-right ms-2"></i></button></li>
             </ul>
           </nav> 
         </section>
