--- a/src/main/resources/templates/mypage-6.html
+++ b/src/main/resources/templates/mypage-6.html
@@ -111,29 +111,29 @@
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소
-										신청 조회<span class="fs-sm text-muted ms-auto">1</span></a></li>
+										신청 조회<span class="fs-sm text-muted ms-auto">[[${admissionCount}]]</span></a></li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-3}"><i class="ci-heart opacity-60 me-2"></i>찜<span
-										class="fs-sm text-muted ms-auto">3</span></a></li>
+										class="fs-sm text-muted ms-auto">[[${wishCount}]]</span></a></li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
-										신고 조회<span class="fs-sm text-muted ms-auto">3</span></a></li>
+										신고 조회<span class="fs-sm text-muted ms-auto">[[${claimCount}]]</span></a></li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-5}"><i class="ci-document opacity-60 me-2"></i>내가
-										쓴 게시글<span class="fs-sm text-muted ms-auto">3</span></a></li>
+										쓴 게시글<span class="fs-sm text-muted ms-auto">[[${boardCount}]]</span></a></li>
 								<li class="border-bottom mb-0">
 									<div class="cgw3 d-flex align-items-center px-4 py-3">
 										<i class="ci-bag opacity-60 me-2"></i>대여 내역 조회<span
-											class="fs-sm text-muted ms-auto">3</span>
+											class="fs-sm text-muted ms-auto">[[${rentalCount}]]</span>
 									</div>
 								</li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
-										class="fs-sm text-muted ms-auto">3</span></a></li>
+										class="fs-sm text-muted ms-auto">[[${cartCount}]]</span></a></li>
 								<li class="border-bottom mb-0">
 									<div class="nav-link-style d-flex align-items-center px-4 py-2">
 										<a class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i
