mypage 사이드바 로그아웃 기능 추가 / 조규완 / 02-12 13:49

--- a/src/main/resources/templates/mypage-5.html
+++ b/src/main/resources/templates/mypage-5.html
@@ -126,7 +126,7 @@
 				                      class="fs-sm text-muted ms-auto">[[${cartCount}]]</span></a></li>
 				                <li class="border-bottom mb-0">
 				                  <div class="nav-link-style d-flex align-items-center px-4 py-2"><a
-				                      class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i class="ci-sign-out me-2"></i>로그아웃</a>
+				                      class="fs-sm ms-auto btn btn-logout btn-sm" th:href="@{/logout}"><i class="ci-sign-out me-2"></i>로그아웃</a>
 				                  </div>
 				                </li>
 				             </ul>
